@@ -1,8 +1,8 @@
 //***************************************************************************
 // include/cxx/cstdarg
 //
-//   Copyright (C) 2009 Gregory Nutt. All rights reserved.
-//   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+//   Copyright (C) 2009, 2012 Gregory Nutt. All rights reserved.
+//   Author: Gregory Nutt <gnutt@nuttx.org>
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -40,7 +40,7 @@
 // Included Files
 //***************************************************************************
 
-#include <stdard.h>
+#include <stdarg.h>
 
 //***************************************************************************
 // Namespace
