@@ -1,7 +1,7 @@
 /****************************************************************************
- * include/nuttx/math.h
+ * include/nuttx/stdarg.h
  *
- *   Copyright (C) 2009, 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -33,8 +33,8 @@
  *
  ****************************************************************************/
 
-#ifndef __INCLUDE_NUTTX_MATH_H
-#define __INCLUDE_NUTTX_MATH_H
+#ifndef __INCLUDE_NUTTX_STDARG_H
+#define __INCLUDE_NUTTX_STDARG_H
 
 /****************************************************************************
  * Included Files
@@ -42,14 +42,15 @@
 
 #include <nuttx/config.h>
 
-/* If CONFIG_ARCH_MATH_H is defined, then the top-level Makefile will copy
- * this header file to include/math.h where it will become the system math.h
- * header file.  In this case, the architecture specific code must provide
- * an arch/<architecture>/include/math.h file which will be included below:
+/* If CONFIG_ARCH_STDARG_H is defined, then the top-level Makefile will copy
+ * this header file to include/stdarg.h where it will become the system
+ * stdarg.h header file.  In this case, the architecture specific code must
+ * provide an arch/<architecture>/include/math.h file which will be included
+ * below:
  */
 
-#ifdef CONFIG_ARCH_MATH_H
-#  include <arch/math.h>
+#ifdef CONFIG_ARCH_STDARG_H
+#  include <arch/stdarg.h>
 #endif
 
 /****************************************************************************
@@ -60,4 +61,4 @@
  * Public Function Prototypes
  ****************************************************************************/
 
-#endif /* __INCLUDE_NUTTX_MATH_H */
+#endif /* __INCLUDE_NUTTX_STDARG_H */
